Browser call fix and icon

--- a/dyndns updater/MainForm.resx
+++ b/dyndns updater/MainForm.resx
@@ -120,4 +120,141 @@
   <metadata name="menuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAMAICAAAAEAIACoEAAANgAAABgYAAABACAAiAkAAN4QAAAQEAAAAQAgAGgEAABmGgAAKAAAACAA
+        AABAAAAAAQAgAAAAAACAEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAQAAAAMAAAAEgAAABYAAAAWAAAAFgAAABYAAAASAAAADAAAAAQAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAMAAAANAAAAGwAAAC4AAAA8AAAAQgAAAEMAAABDAAAAQgAAADwAAAAuAAAAGwAAAAwAAAADAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAFAAAAFgAAAC4cFAVKmG4ZtrF/H+u4hSD/u4Yf/7yGH/+9hB7/uX4b651sF7YcFARJAAAALAAA
+        ABUAAAAFAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAABQAAABkAAAA4mG4atLqGH//Ijxv/1JUW/9mWEv/YlRD/2ZEK/76bGP9XvFr/p5Um/8uA
+        FP+VZhanAAAANwAAABkAAAAFAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAMAAAAWAAAAOLGAHe3DjR//3J0f/92dH//bnB7/25se/9uZGv/glRT/3ZQQ/znM
+        b/8A6Z//Js1z/8iFEf+9fhntAAAANgAAABQAAAADAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAADQAAAC6ygB3sx5Ai/+CiKP/foin/3qEq/96hKf/eoCf/350i/+mX
+        Gf9FzHH/AOaf/wDhlf8A4JT/ANyN/6iSJf+2fBreAAAALAAAAAsAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAQAAAAbm3AZsMSOI//jqDD/4qcy/+GnM//jpzP/46Ux/+aj
+        Lf/soSf/5aAm/17GZf8A5p7/AOGV/wDek/8A3pP/ANaD/9GCDf+XahijAAAAJAAAABYAAAAWAAAAFgAA
+        ABYAAAAWAAAAFgAAABYAAAAWAAAAFgAAABAAAAAFAAAADCUbBje6hh3/5akz/+WrOP/kqzv/5aw9/+ir
+        PP/wqTf/1K9B/3vGZf8A5p3/nLdO/1PJbP8u0Xn/K851/yfNdP9AwWD/dKo6/7+EHP8AAABIAAAAQwAA
+        AEMAAABDAAAAQwAAAEMAAABDAAAAQwAAAEMAAABCAAAAMQAAABAAAAASoHEYrtKUJ//cskX/664//+ix
+        Rf/qskX/9K9B/8y5Uv8A9bH/ac91/1LQeP9LznX/Vsls/9CjLP/ulhb/6ZMP/+OPCP/bjQH/xIcQ/7iC
+        F/+1fQ3/tHsI/7R6B/+0egf/tHoH/7R6B/+0egf/tHsI/7V9DP+1fxTzAAAAFgAAABa1fRnpx7NJ/zPs
+        n//xsUX/7bVM//G1Tf/ytk//APWy/wDwqP9i0Hj/p75Z/3LHav/5oyz/6KIq/+CeJP/dmh3/2ZYT/9eQ
+        Cv/MiAT/y6RZ/////////////////////////////////////////////////8qhUP8AAAAWAAAAFryA
+        F/9v3YX/l89y//S7Wv/zwGT/+7tY/4jTe/8A8av/AO2j/wDqof8A6aD/Gt2N//ymM//npjH/36Ir/9ud
+        I//ZmBr/2ZEO/9qJAP+1eAb/////////////////////////////////////////////////x5xH/wAA
+        ABYAAAAWwIkh/+O/XP/1uln/9s+G//bLfP//xW3/MOie/wDvqP8A66H/AOif/wDmnP8A6J//0LNK//Co
+        NP/jpS7/3qAm/9yZG//jkQz/K8dr/7t2A//////////9///9+v///fr///36///9+v///fr///78////
+        ///HnEb/AAAAFgAAABa/iib/9MFh//XNhf/315n/+NOO///PhP9W6aX/APCr/wDroP8A6J7/AOWb/wDl
+        m/8I35H/xLNI/+ikMf/goSj/4Zoc/7efJf8A4Z3/wHQB///////////////8/////P////z///78///+
+        +/////z//////8ecRv8AAAAWAAAAErWAFv/2yXP/+Nib//reqf/726D//9iY/5jlpf8W8bL/C+ym/wDo
+        nv8L5Jb/AOWa/wDlnf9B0Hn/7KYy/+KjKf/nmhz/dbJF/xbgov/AdQT/////////////////////////
+        ///////////////+////////x5xG/wAAABYAAAAMsn4W5uzDc//53qj/++S3//7hrv//4Kj/pOmy/yzz
+        uv8f7a//G+eh/9HEZ/8A5pz/k8Rl/+2tPv/rpzP/5qEq//GYGP8eym//X8mE/8mDAP/dqgD/2KUA/9ek
+        AP/XpAD/16QA/9ekAP/WoQD/9uex///////HnEb/AAAAFgAAAASreheg1KhS//3isP/96sb//+a6/+zp
+        u/+M8cH/QfXB/zLxuP8b7bD/LOOd/xfgk/9V0Xn/s7hS//GmMv/wniX/ZbtV/wDgnP+Yokv/6ceZ////
+        ///////////////////////////////+/////Pn//////8ecRv8AAAAWAAAAAFlADRe6hBv/+d2i//7x
+        1///6cb/t/HM/2D40f9r88b/jOix/4Ljpf8656j/dNWH/wDnoP9sx2r/6qYy/3q5U/9HxGX/Yd2m/8J7
+        D//x6eL///72///78f//+vH///rx///68f//+vH///rv///67///////x5xG/wAAABYAAAAAAAAAA616
+        F53LnED//+7N///w1f//6cX/lPbS/+Pktf//2J7//9GO/1vnrf8j66//iM99/9OwQv9xv1v/ANqK/1jl
+        rf+4lzf/5r+B////+v////H///3u///97v///e7///3u///97v///O3///rs///////HnEb/AAAAFgAA
+        AAAAAAAAAAAABbR/FOfRo0n///LY/7P/7/+P/eT/++S4///cqP//1Zr//82J//zHef/TvV7/JtJ6/wDj
+        mv9c78X/v51D/7eCLf+mprH/oqGm/6Ggov+hoKL/oZ+i/6Gfov+hn6L/oZ+h/56dnv/p49j//////8ec
+        Rv8AAAAWAAAAAAAAAAAAAAAAAAAABbZ/FObQnED/zfHN/6b/9P+e/+z/yO3K/8Xnu//U2qD/y8Rq/ync
+        j/8y8L7/ee7H/86TOf/IkDv///z7//////////3////9/////P////z////8/////P////z///33///6
+        7v//////x5xH/wAAABYAAAAAAAAAAAAAAAAAAAAAAAAAA7R+FZm3hRr/mrdq/4TrwP+E/+3/dP/l/0f8
+        1P9o/t//jOGz/6msYP+4fRn/3Kcc///ZKP/61SL/+dId//nSHP/50hz/+dIc//nSHP/50hz/+dIc//nR
+        Gv/3zxH//u63///////HnEf/AAAAFgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAIphEw+3fRSZvn4Q9798
+        Dv/AfA3/wXwN/795B//Lkjb/3LFy/+zAEv/yzB3/78oe/+7IHf/uyBz/7scc/+7HHP/uxxz/7scc/+7H
+        HP/uxxz/7cca/+zEDf/867b//////8ecR/8AAAAWAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAWtnwK/////////PT/4bgA/+G6BP/hugb/4boG/+G6Bv/hugb/4boG/+G6
+        Bv/hugb/4boG/+G6Bv/huQT/37YA//jmrf//////x5xH/wAAABYAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABa0ewn////////15f//+fX///v////8/////P////z////8
+        /////P////z////8/////P////z////7////+ff///bo///////HnEf/AAAAFgAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAFrR6CP////////Th/9ekAP/ZqAD/2agA/9mo
+        AP/ZqAD/2KcA/9inAP/YpwD/2KcA/9inAP/YpwD/2KcA/9elAP/14Jv//////8ecR/8AAAAWAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAWtHoI////////8tj///fj///6
+        6P//+un///rp///56f//9+f///Xm///15///9ev///fz///39///9/b///Xv///y4P//////x5xH/wAA
+        ABYAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABa0egj////////x
+        0v+fn6P/oqKm/6Ojp/+joqf/oKCm/+reyv//8dX///DW///x4P/30BT/+NIe//jSH//30BX//uip////
+        ///HnEj/AAAAFgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAFrR6
+        CP////////HP///20///+dX///nV///51f//+NX///bT///00v//89T///Th/+3FDP/txxr/7sca/+zF
+        D//656r//////8ecSP8AAAAWAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAWtHoI////////8c//np6h/6Kho/+ioaP/oqGj/6Kho/+hoaP/oaCj/56eo//p39L/4LYA/+C4
+        Af/guAH/37YA//fiof//////x5xH/wAAABYAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAABW0ewn////////wzv//8s////TR///00f//9NH///TR///00f//9NH///PR///y
+        1P//8tz///Pg///z4P//8tz///DV///////HnUn/AAAAFgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAADbZ+Dv//////////////////////////////////////////////
+        /////////////////////////////////////////////8qiUf8AAAAQAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEtYEYtLZ+Dv+0ewn/tHoI/7R6CP+0egj/tHoI/7R6
+        CP+0egj/tHoI/7R6CP+0egj/tHoI/7R6CP+0egj/tHoI/7R7Cf+1fQ3/t4AU8AAAAAX8AP//8AA//+AA
+        H//AAA//gAAH/4AAB/8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAgAAAAIAA
+        AADAAAAA4AAAAPAAAAD8AAAA/+AAAP/gAAD/4AAA/+AAAP/gAAD/4AAA/+AAAP/gAAD/4AAA/+AAACgA
+        AAAYAAAAMAAAAAEAIAAAAAAAYAkAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACBYhoBYlAXBhcU
+        BhEAAAAdAAAAIQAAACEAAAAfAAAAGDc/GAxHWSMCAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAI1xIwE0KQwQBwUBKDwrCmJZQA+WXEIPoF1DD6FeQQ6dVToMgh4V
+        BEILDgUXR1cjBwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAjXcqAT00
+        Eg8cFARIgl4WsrF/GubMkBf70JEU/tGOEP6qmyX9ips286BuFNhTOQxxDQ8GIVtnMQcAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACMcywBNi8SECEYBVK7hx/105gh/92eIf/cnSD/3Jse/+CW
+        Fv+Urj3/FdyL/xXXg/+elCv7clERqAsHAStpcD4DAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAB0YCkGJhwGQZ9zG9PYnir/4KQt/uCkLv7hoiz/46An/uacIP490Hf/AOOZ/gDfk/8V0oD+i5kz9mlH
+        DYkREgoUR0grC0pHLAtMRi4LTUcyC05INwtSSz4LU05DCZWMeAMkHQsTZ0oQjdKZKvrkqjb/46o5/uaq
+        Of7nqTf/t7RI/lDOdP55wF3/MNJ8/iDSff8hznb+XbNL/qqGH+0AAAA9AAAANwAAADcAAAA3AAAANwAA
+        ADcAAAA3AAAALyEfGxQpHQY9uocj3rm3UP/sr0L/6rJG//GxRf9y03v/M+GS/2fMcf9fyWz/qrFD/+Wa
+        Hv/kkxD/3Y8H/8uICv+/jzD/x5xH/8abRf/Hm0X/xptF/8abRf/HnEb/wZI1+i4hCE4uHwZNqaM/+XLY
+        gP7yt1H/8rlV/svBYP4A8qz/GOWY/krVgP5zxmj/8KQu/uGhKf/bmh3+2JMR/tSKBP7PqmP//v7+/v7+
+        /v7//////v7+/v7+/v7/////486l/jInElAvIQdQwqZC/tfBYP71yXn/+cVu/nPaif4A7qf/AOmg/gDn
+        nf472IX/5Ks7/uWlLv/cnSL+3ZQT/nmtP/7LmEL//v7+/v79+/7//fv//v37/v79+/7//v3/4s2i/jEm
+        EVAvIQhP2KVD//XMgf/42Jr//NON/4zinv8E76r/Aemf/wLlmv8B5Jn/VM10/9eqOv/hnyX/xJ4k/y3R
+        gv/Ql0H//////////f////3///78///+/P////3/482i/zEmEVAsHwVI0qJE+PbVlf774K3//dyj/rbk
+        qP4e8LP/Eemk/lXYhv4S4ZT/cMlu/tasPP/lnyX+mqs6/j7OhP7PkiH/7NN//uvRf/7r0X//6tF//urQ
+        f/779eH/4s2i/jEmEVCVfz4ww5Q42PPUmf/957//9+W2/6ntu/84873/JO2x/0bflv8m3I3/k8Fg/+Sq
+        Of/Uoy7/R8Zr/2m3Z//mw4b/9um///Xov//16L//9ei///Tnv//9+e3/482i/zEmEVCpnFsEknAhfN+5
+        bfj+79H/4+zJ/oT1z/6R7Lz/peGl/lrkpv5Q3JL/U9F7/rqxRf9XxGb+YcuA/rWbQ/738uv//vzy/v76
+        8P7/+vD//vrw/v767v7/+/L/4s2i/jEmEVAAAAAAraxjKbqRMsrt0p3/6/LY/qP42v7z4bH//tab/sHY
+        mf6X1Ir/lMNl/knNc/9F25v+oaZU/sKof/7Qz87/z87I/s/Ox/7Qzsj/z83H/s7Mxf728un/4s2i/jEm
+        EVAAAAAAAAAAAKq3cC7EkjLx0dOd/qn76f699Nf/1OW6/tvZoP62yHP/Qd6X/k/quP+2pFT+2biC/unl
+        4v7n5+f/5+fl/ufn5f7n5+X/5+fl/ubl4f779+7/4s2i/jEmEVAAAAAAAAAAAAAAAACgsG0erIQjmqOd
+        RdyS05z9jN6y/23cpf+F2aP/qL18/8GVKv/ouR7/+dMj//bQHf/2zxz/9s8c//bPHP/2zxz/9s8b//TM
+        Ev/+8sn/482j/zEmEVAAAAAAAAAAAAAAAAAAAAAAmKFhA6iZSzu0nkl8tp5Hf3ZWFofFji3/6c+m/ujC
+        M//pwhD+58ER/ufAEf7nwBH/58AQ/ufAEP7nwBH/58AP/uW9CP777sX/4s2i/jEmEVAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAACwwIRDHnEb//vrz/vnsxP/36sD+9+vA/vfrwP7368D/9+vA/vfr
+        wP7368D/9+rA/vfou/799eL/4s2i/jEmEVAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAC0v
+        IBDHm0X///nv/+jHYv/ivDr/4rw6/+K8Ov/iuzn/4bo5/+G6Ov/iuz3/4bs9/+G5PP/568H/482j/zEm
+        EVAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAC4uIBDGm0X//vjp/tvUx//Qzsf+0M7H/s/M
+        x/737Nn//vLd/v7y4/7744X/++SK/vvihP7+8dP/4s2j/jEmEVAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAC4tHxDGm0X//vfn/u3kyf/n48n+6OPJ/ufiyf778NH//vLT/v7y3f7vyBH/8Mkb/u/I
+        E/787b//4s2j/jEmEVAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAC8sHhDHm0b///jn/8jC
+        tf+5ta7/ubWu/7m1rv+4ta7/t7Su/+DXyf/oxTf/58Y4/+fFN//67ML/482j/zEnEVAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAADAsIAzHnUj//vvy/v/45//++ej+/vno/v756P7/+ej//vno/v74
+        6f7/+O7//vjv/v747f7/+e//48+l/jInE00AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAKCV
+        egS6hyLUx51I/sabRf/Gm0X+xptF/sabRf7Gm0X/xptF/sabRf7Gm0X/xptF/sabRf7HnEf/wZI2+bWd
+        X0LgB/8AwAP/AIAB/wAAAP8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAgAAAAMAA
+        AADgAAAA8AAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAAoAAAAEAAAACAAAAABACAAAAAAAEAE
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABnUBYEIBsIFgAAACkAAAAsAAAAKRgcChZCUyADAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABpWR8IJhsGTI1lFr/Fixn6yowW/6KWKvqKZRW/JRkFR1Fd
+        KggAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABwXSQELCAHWsaPIfrdnyT/3J4j/+CYGv9WxGP/Cd2O/4uc
+        N/otHwZVZGk7AwAAAAAAAAAAAAAAAAAAAAAAAAAAMCcQGL+LI+vjqTX/5Kk3/+OoNf+Tu1P/U8tv/xbX
+        hf8Z0Hr/poYe6AAAADEAAAAsAAAALAAAACwAAAAsLCkkFVU7DG+quVX/7LFF//CzSP8z5Jf/cctv/4PA
+        Xf/hniT/4JQR/9CLB//NqF//2byD/9m8g//ZvIP/2b2E/19IGYdfQg6Kt8lr//TFcP+sznf/AO6l/wDo
+        n/95x2r/5qUv/9ubH/+wnCH/27uB///+/f///vz///78///+/v9jTiOKXUIPifXLff/52Jz/u92Z/wju
+        qP8C5pv/AuOY/7azSf/iniL/UMRq/9+5gP////7////9///+/f///v7/Y04jioZpJGXtyof//eW5/8bo
+        tf8v8bj/TN6V/z/Wg//frD3/y6Qv/0XFdv/jvGb/69F//+vRf//q0H///Pjq/2NOI4qgl1gGyp1F5v7u
+        z/+q8s3/tuWy/4Xgov9H3ZT/prdO/0bPe/+wq1v/+/nw///77///++////vu///89v9jTiOKAAAAAKyy
+        aDzVrF34rfvl/9jrxf/l2J//sMl0/zTkpv+sq1//1si2/9DP0P/Qz8//0M/P/8/OzP/59vH/Y04jigAA
+        AAAAAAAAoatlJ6SGKqmhuXL9j7x0/5+6c//Kpj//78Uf//PNHv/zzBz/88wc//PMHP/yyhT//vXa/2NO
+        I4oAAAAAAAAAAAAAAAAAAAAAAAAAAFhgQQvavYT/9+iz//Dagv/w24L/8NuC//Dbgv/w24L/79h+//32
+        5P9jTiOKAAAAAAAAAAAAAAAAAAAAAAAAAABbXkEL2byD//Xgp//s0XT/7NB0/+vOc//rznT/6896/+vO
+        ef/89N7/Y04jigAAAAAAAAAAAAAAAAAAAAAAAAAAXVs/C9m8g//n3cX/0M29/9DMvf/57tH///La//LL
+        Fv/yyxf//fPU/2NOJIoAAAAAAAAAAAAAAAAAAAAAAAAAAGBYPQrZvIP/5tzD/9DKuv/Qyrr/0Mq6/+HY
+        xv/v1G//79Rv//303f9jTiSKAAAAAAAAAAAAAAAAAAAAAAAAAACTiG4EyJ9M7Nm8g//ZvIP/2byD/9m8
+        g//ZvIP/2byD/9m8g//ZvYX/nH8/gcB/AACAPwAAAB8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAIAA
+        AADAAAAA+AAAAPgAAAD4AAAA+AAAAPgAAAA=
+</value>
+  </data>
 </root>
