--- a/dyndns updater/Language/Window.de-DE.resx
+++ b/dyndns updater/Language/Window.de-DE.resx
@@ -237,4 +237,7 @@
   <data name="Yes" xml:space="preserve">
     <value>Ja</value>
   </data>
+  <data name="Language" xml:space="preserve">
+    <value>Sprache</value>
+  </data>
 </root>
