--- a/dyndns updater/Language/Window.resx
+++ b/dyndns updater/Language/Window.resx
@@ -246,4 +246,7 @@
   <data name="Yes" xml:space="preserve">
     <value>Yes</value>
   </data>
+  <data name="ReportBug" xml:space="preserve">
+    <value>Report a bug</value>
+  </data>
 </root>
